chore(renovate): cooldown 14 days

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -4,6 +4,7 @@
         "config:recommended",
         ":disableDependencyDashboard"
     ],
+    "minimumReleaseAge": "14 days",
     "packageRules": [
         {
             "matchUpdateTypes": [
